--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -45,7 +45,7 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:background="#000"
+            android:background="#ffff393b"
             android:layout_weight="2"
             android:gravity="right">
 
@@ -62,14 +62,14 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#000"
+            android:background="#ffff393b"
             android:gravity="center_horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:id="@+id/textView6"
                 android:textSize="14dp" />
 
@@ -78,14 +78,14 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView7"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:textSize="14dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:id="@+id/textView8"
                 android:textSize="14dp" />
 
@@ -95,7 +95,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Lyrics"
                 android:id="@+id/tv_lyrics"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
 
@@ -103,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="14"
-            android:background="#000"
+            android:background="#ffff393b"
             >
 
         <LinearLayout
@@ -144,7 +144,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text=" "
                     android:textSize="14dp"
-                    android:textColor="#FFF"
+                    android:textColor="#000"
                     android:id="@+id/lyrics"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal" />
