--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -46,7 +46,7 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:background="#ffff393b"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:gravity="right">
 
             <ImageButton
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:textColor="#000"
+                android:textColor="#FFF"
                 android:id="@+id/textView6"
                 android:textSize="14dp" />
 
@@ -78,14 +78,14 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView7"
-                android:textColor="#000"
+                android:textColor="#FFF"
                 android:textSize="14dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:textColor="#000"
+                android:textColor="#FFF"
                 android:id="@+id/textView8"
                 android:textSize="14dp" />
 
