--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -41,49 +41,49 @@
             android:id="@+id/linearLayout">
 
             <RelativeLayout
-                android:layout_width="fill_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#3c0000"
+            android:id="@+id/textNowPlayingLay">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#3c0000"
-                android:id="@+id/textNowPlayingLay">
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true">
 
-                <LinearLayout
-                    android:orientation="horizontal"
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="16dp"
-                        android:text="Next : "
-                        android:textColor="@android:color/white"
-                        android:layout_marginLeft="5dp"
-                        android:id="@+id/textNext"
-                        android:gravity="center" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="4dp"
-                        android:textSize="16dp"
-                        android:ellipsize="marquee"
-                        android:marqueeRepeatLimit ="marquee_forever"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:scrollHorizontally="true"
-                        android:text="คิดถึง - Bodyslam"
-                        android:id="@+id/textNameSong"
-                        android:layout_centerHorizontal="true"
-                        android:textColor="@android:color/white"
-                        android:singleLine="true"
-                        android:gravity="center"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
-            </RelativeLayout>
+                    android:layout_height="20dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="16dp"
+                    android:text="Next : "
+                    android:textColor="@android:color/white"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/textNext"
+                    android:gravity="center" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="16dp"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit ="marquee_forever"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollHorizontally="true"
+                    android:text="คิดถึง - Bodyslam"
+                    android:id="@+id/textNameSong"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@android:color/white"
+                    android:singleLine="true"
+                    android:gravity="center"
+                    android:layout_marginTop="4dp" />
+            </LinearLayout>
+        </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -244,62 +244,72 @@
             </LinearLayout>
             <!--</GridLayout>-->
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:id="@+id/linearLayout2"
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/layout_seekBar"
-                android:layout_centerHorizontal="true">
+                android:layout_below="@+id/layout_seekBar">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="65dp"
-                    android:src="@drawable/big_bar_l"
-                    android:scaleType="centerCrop"/>
-
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="65dp"
-                    android:text="Now Playing: "
-                    android:id="@+id/textView3"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@android:color/black"
-                    android:textSize="18dp"
-                    android:textIsSelectable="false"
-                    android:paddingTop="25dp"
-                    android:background="@drawable/big_bar_1px"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                     />
-                <TextView
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="65dp"
-                    android:maxWidth="150dp"
-                    android:minWidth="100dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="ม่ต่างกัน - 25 Hours"
-                    android:textSize="18dp"
-                    android:background="@drawable/big_bar_1px"
-                    android:id="@+id/textNowPlaying"
-                    android:textColor="@android:color/black"
-                    android:ellipsize="marquee"
-                    android:marqueeRepeatLimit ="marquee_forever"
-                    android:layout_centerHorizontal="true"
-                    android:singleLine="true"
-                    android:scrollHorizontally="true"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:freezesText="true"
-                    android:paddingLeft="5dp"
-                    android:gravity="center_vertical" />
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="65dp"
-                    android:src="@drawable/big_bar_r"
-                    android:scaleType="centerCrop" />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:id="@+id/im_1"
+                        android:layout_height="65dp"
+                        android:src="@drawable/big_bar_l"
+                        android:scaleType="centerCrop"/>
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="65dp"
+                        android:text="Now Playing: "
+                        android:id="@+id/textView3"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@android:color/black"
+                        android:textSize="18dp"
+                        android:textIsSelectable="false"
+                        android:paddingTop="25dp"
+                        android:background="@drawable/big_bar_1px"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="65dp"
+                        android:minWidth="100dp"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="ม่ต่างกัน - 25 Hours"
+                        android:textSize="18dp"
+                        android:background="@drawable/big_bar_1px"
+                        android:id="@+id/textNowPlaying"
+                        android:textColor="@android:color/black"
+                        android:ellipsize="marquee"
+                        android:marqueeRepeatLimit ="marquee_forever"
+                        android:layout_centerHorizontal="true"
+                        android:singleLine="true"
+                        android:scrollHorizontally="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:freezesText="true"
+                        android:paddingLeft="5dp"
+                        android:gravity="center_vertical" />
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="65dp"
+                        android:id="@+id/im_2"
+                        android:src="@drawable/big_bar_r"
+                        android:scaleType="centerCrop" />
+
+
+                </LinearLayout>
+            </RelativeLayout>
+
+
 
             <!--<FrameLayout-->
                 <!--android:layout_width="200dp"-->
