--- a/app/src/main/res/layout/alert_banner.xml
+++ b/app/src/main/res/layout/alert_banner.xml
@@ -8,7 +8,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/imgBigBanner" />
+        android:id="@+id/imgBigBanner"
+        android:layout_margin="20dp"
+        android:background="@null" />
 
     <ImageView
         android:id="@+id/close_dialog"
