--- a/app/src/main/res/layout/customdialog.xml
+++ b/app/src/main/res/layout/customdialog.xml
@@ -31,6 +31,19 @@
         android:id="@+id/editFrom"
         style="@style/Widget.AppCompat.EditText" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Telephone"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="@android:style/TextAppearance.Large" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTel"
+        style="@style/Widget.AppCompat.EditText" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
