phone call stop mediaplayer

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -283,7 +283,7 @@
                         android:text="Now Playing: "
                         android:id="@+id/textView3"
                         android:layout_gravity="center_vertical"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/white"
                         android:textSize="18dp"
                         android:textIsSelectable="false"
                         android:paddingTop="25dp"
@@ -299,7 +299,7 @@
                         android:textSize="18dp"
                         android:background="@drawable/big_bar_1px"
                         android:id="@+id/textNowPlaying"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/white"
                         android:ellipsize="marquee"
                         android:marqueeRepeatLimit ="marquee_forever"
                         android:layout_centerHorizontal="true"
