--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -278,9 +278,9 @@
                         android:scaleType="centerCrop"/>
 
                     <TextView
-                        android:layout_width="140dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="65dp"
-                        android:text="Now Playing: "
+                        android:text="Now Playing:"
                         android:id="@+id/textView3"
                         android:layout_gravity="center_vertical"
                         android:textColor="@android:color/white"
@@ -307,7 +307,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:freezesText="true"
-                        android:paddingLeft="5dp"
+                        android:paddingLeft="1dp"
                         android:gravity="center_vertical" />
 
                     <ImageView
