--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -39,8 +39,7 @@
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:singleLine="true"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:layout_marginLeft="2dp" />
+                android:marqueeRepeatLimit="marquee_forever"/>
         </RelativeLayout>
 
         <RelativeLayout
