--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -61,7 +61,8 @@
                     android:textColor="#FFF"
                     android:id="@+id/txtAuthor"
                     android:textSize="20dp"
-                    android:layout_marginTop="10dp" />
+                    android:layout_marginTop="10dp"
+                    android:singleLine="true" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -69,7 +70,8 @@
                     android:text="New Text"
                     android:id="@+id/txtAuthor2"
                     android:textColor="#FFF"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:singleLine="true" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -77,7 +79,8 @@
                     android:text="New Text"
                     android:textColor="#FFF"
                     android:id="@+id/txtAuthor3"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:singleLine="true" />
 
                 <TextView
                     android:layout_width="wrap_content"
